docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -199,7 +199,6 @@ CONTRIBUTORS:
       Kirill Elagin <kirelagin@gmail.com>
       Kunihiko IMAI <kimai@iodata.jp>
       LaMont Jones <lamont@debian.org>
-      LaMont Jones <lamont@mmjgroup.com>
       Lars Wirzenius
       Lauri Nurmi <lanurmi@iki.fi>
       Lawrence Rust <lawrence@softsystem.co.uk>
@@ -222,11 +221,10 @@ CONTRIBUTORS:
       Martin Schlemmer <azarah@gentoo.org>
       Martin Schulze <joey@infodrom.org>
       Martin Steigerwald <ms@teamix.de>
-      Masatake YAMATO <jet@gyve.org>
       Masatake YAMATO <yamato@redhat.com>
       Matthew Garrett <mjg59@srcf.ucam.org>
       Matthias Koenig <mkoenig@suse.de>
-      Matthias KÃ¶nig <mk@phasorlab.de>
+      Matthias König <mk@phasorlab.de>
       Maurizio Lombardi <m.lombardi85@gmail.com>
       maximilian attems <max@stro.at>
       Maxim Levitsky <maximlevitsky@gmail.com>
@@ -240,7 +238,6 @@ CONTRIBUTORS:
       Mikel Olasagasti <hey_neken@mundurat.net>
       Mikel Olasagasti Uranga <hey_neken@mundurat.net>
       Mikhail Gusarov <dottedmag@dottedmag.net>
-      Miklos Szeredi <miklos@szeredi.hu>
       Miklos Szeredi <mszeredi@suse.cz>
       Milan Bouchet-Valat <nalimilan@club.fr>
       Milan Broz <mbroz@redhat.com>
