flock: fix flock.1 grammar by removing »s«

--- a/sys-utils/flock.1
+++ b/sys-utils/flock.1
@@ -42,7 +42,7 @@ This utility manages
 .BR flock (2)
 locks from within shell scripts or the command line.
 .PP
-The first and second forms wraps the lock around the executing a command, in
+The first and second forms wrap the lock around the executing a command, in
 a manner similar to
 .BR su (1)
 or
